--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ETHIO BINGO GOLD - LUXURY EDITION</title>
+    <title>ETHIO BINGO GOLD - WALLET SYSTEM</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
@@ -11,7 +11,6 @@
     <style>
         :root { 
             --gold: #facc15; 
-            --gold-glow: rgba(250, 204, 21, 0.4);
             --bg: #020617; 
             --card-bg: rgba(30, 41, 59, 0.7);
             --green: #10b981; 
@@ -21,118 +20,87 @@
         body { 
             background: radial-gradient(circle at top, #1e293b, var(--bg)); 
             color: white; 
-            font-family: 'Inter', system-ui, -apple-system, sans-serif; 
+            font-family: 'Inter', sans-serif; 
             margin: 0; 
-            overflow-x: hidden; 
-            user-select: none;
             min-height: 100vh;
+            user-select: none;
         }
 
         #splash-screen { 
             position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
             background: var(--bg); display: flex; justify-content: center; align-items: center; 
-            z-index: 9999; animation: fadeOut 0.8s forwards 2s; 
+            z-index: 9999; animation: fadeOut 0.8s forwards 1.5s; 
         }
-        #splash-screen h1 { font-size: 3.5rem; color: var(--gold); font-weight: 900; text-shadow: 0 0 30px var(--gold-glow); }
-
-        @keyframes fadeOut { to { opacity: 0; visibility: hidden; } }
 
         #winner-overlay { 
             position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: rgba(2, 6, 23, 0.95); display: none; 
-            justify-content: center; align-items: center; z-index: 2000; 
+            background: rgba(2, 6, 23, 0.98); display: none; 
+            flex-direction: column; justify-content: center; align-items: center; z-index: 2000; 
         }
-        #winner-name { 
-            color: var(--gold); font-size: 4rem; font-weight: 900; 
-            text-shadow: 0 0 50px var(--gold); 
-            animation: pulse 1s infinite alternate;
-        }
-        @keyframes pulse { from { transform: scale(1); } to { transform: scale(1.1); } }
+        #winner-name { color: var(--gold); font-size: 3.5rem; font-weight: 900; text-align: center; text-shadow: 0 0 30px var(--gold); }
 
         .header { 
-            padding: 12px 20px; 
-            background: rgba(15, 23, 42, 0.8); 
-            backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(250, 204, 21, 0.3); 
-            display: flex; justify-content: space-between; align-items: center;
-            position: sticky; top: 0; z-index: 100;
+            padding: 12px 20px; background: rgba(15, 23, 42, 0.8); 
+            backdrop-filter: blur(10px); border-bottom: 1px solid rgba(250, 204, 21, 0.3); 
+            display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 100;
         }
 
         .page { display: none; padding: 15px; animation: slideUp 0.4s ease-out; }
         .page.active { display: block; }
-        @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
 
         .ball { 
-            width: 85px; height: 85px; 
-            background: radial-gradient(circle at 30% 30%, #fff, var(--gold) 40%, #854d0e); 
+            width: 80px; height: 80px; background: radial-gradient(circle at 30% 30%, #fff, var(--gold) 40%, #854d0e); 
             border-radius: 50%; display: flex; align-items: center; justify-content: center; 
-            font-size: 2.8rem; font-weight: 900; color: #000; 
-            margin: 15px auto; border: 4px solid #fff; 
+            font-size: 2.5rem; font-weight: 900; color: #000; margin: 15px auto; border: 4px solid #fff; 
             box-shadow: 0 10px 25px rgba(0,0,0,0.7);
         }
 
-        .recent-numbers { display: flex; justify-content: center; gap: 10px; margin-bottom: 20px; }
-        .recent-ball { 
-            width: 38px; height: 38px; background: var(--card-bg); 
-            border-radius: 50%; display: flex; align-items: center; justify-content: center; 
-            font-size: 0.95rem; font-weight: bold; border: 1px solid rgba(250, 204, 21, 0.4); color: var(--gold); 
-        }
-
-        /* የካርቴላ ፎንት መጠን ተቀንሷል */
         .bingo-grid { 
-            display: grid; grid-template-columns: repeat(5, 1fr); gap: 8px; 
-            background: rgba(255, 255, 255, 0.05); padding: 12px; 
-            border-radius: 20px; max-width: 340px; margin: auto; 
-            border: 1px solid rgba(255,255,255,0.1);
+            display: grid; grid-template-columns: repeat(5, 1fr); gap: 6px; 
+            background: rgba(255, 255, 255, 0.05); padding: 10px; 
+            border-radius: 18px; max-width: 330px; margin: auto; border: 1px solid rgba(255,255,255,0.1);
         }
         .cell { 
             aspect-ratio: 1; background: #fff; color: #020617; 
             display: flex; align-items: center; justify-content: center; 
-            font-weight: 800; border-radius: 10px; 
-            font-size: 1.4rem; /* እዚህ ጋር ነው የተቀነሰው */
-            cursor: pointer; transition: all 0.2s; 
-            box-shadow: 0 3px 0 #cbd5e1;
+            font-weight: 800; border-radius: 8px; font-size: 1.4rem; 
+            cursor: pointer; box-shadow: 0 3px 0 #cbd5e1;
         }
-        .cell.marked { 
-            background: var(--red) !important; color: white !important; 
-            transform: scale(0.9) translateY(3px); box-shadow: none; 
-        }
-        .cell.hint { background: #fef08a; border: 1.5px solid var(--gold); box-shadow: 0 0 10px var(--gold-glow); }
-        .cell.free { background: var(--gold) !important; color: #000 !important; font-size: 0.7rem; }
+        .cell.marked { background: var(--red) !important; color: white !important; transform: scale(0.9) translateY(3px); box-shadow: none; }
+        .cell.hint { background: #fef08a; border: 1.5px solid var(--gold); }
+        .cell.free { background: var(--gold) !important; color: #000 !important; font-size: 0.65rem; font-weight: 900; }
 
-        .btn { 
-            width: 100%; padding: 16px; border: none; border-radius: 14px; 
-            font-weight: 700; cursor: pointer; margin-top: 10px; font-size: 1rem; 
-        }
+        .btn { width: 100%; padding: 16px; border: none; border-radius: 14px; font-weight: 700; cursor: pointer; margin-top: 10px; font-size: 1rem; }
         .btn-gold { background: linear-gradient(135deg, #fde047, #ca8a04); color: #422006; }
+        @keyframes fadeOut { to { opacity: 0; visibility: hidden; } }
     </style>
 </head>
 <body>
 
-    <div id="splash-screen"><h1>ኢትዮ ቢንጎ</h1></div>
+    <div id="splash-screen"><h1 style="color:var(--gold)">ኢትዮ ቢንጎ</h1></div>
     <div id="winner-overlay"><h1 id="winner-name">---</h1></div>
 
     <div class="header">
-        <b id="u-name" style="font-size: 1.1rem;">...</b>
-        <div id="u-bal" style="color:var(--green); font-weight:800; font-size: 1.2rem;">0.00 ETB</div>
+        <b id="u-name">...</b>
+        <div id="u-bal" style="color:var(--green); font-weight:800;">0.00 ETB</div>
     </div>
 
     <div id="app-content">
         <div id="home-page" class="page active">
-            <p style="text-align:center; color: #94a3b8; margin-bottom:15px;">ለመጀመር መጠን ይምረጡ</p>
+            <p style="text-align:center; color: #94a3b8;">ለመጀመር መጠን ይምረጡ</p>
             <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px;">
-                <button onclick="goToCardPicker(10)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">10 ETB</button>
-                <button onclick="goToCardPicker(20)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">20 ETB</button>
-                <button onclick="goToCardPicker(50)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">50 ETB</button>
-                <button onclick="goToCardPicker(100)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">100 ETB</button>
-                <button onclick="goToCardPicker(500)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">500 ETB</button>
-                <button onclick="goToCardPicker(1000)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">1000 ETB</button>
+                <button onclick="goToCardPicker(10)" class="btn" style="background:var(--card-bg); color:white;">10 ETB</button>
+                <button onclick="goToCardPicker(20)" class="btn" style="background:var(--card-bg); color:white;">20 ETB</button>
+                <button onclick="goToCardPicker(50)" class="btn" style="background:var(--card-bg); color:white;">50 ETB</button>
+                <button onclick="goToCardPicker(100)" class="btn" style="background:var(--card-bg); color:white;">100 ETB</button>
+                <button onclick="goToCardPicker(500)" class="btn" style="background:var(--card-bg); color:white;">500 ETB</button>
+                <button onclick="goToCardPicker(1000)" class="btn" style="background:var(--card-bg); color:white;">1000 ETB</button>
             </div>
             <button id="admin-btn" class="btn" style="background:var(--green); display:none; margin-top:30px; color:white;" onclick="showAdmin()">🔧 ዳኛ መቆጣጠሪያ</button>
         </div>
 
         <div id="admin-page" class="page">
-            <h3 style="text-align:center; color:var(--gold)">ዳኛ መቆጣጠሪያ</h3>
             <div class="ball" id="admin-ball">?</div>
             <button class="btn btn-gold" onclick="drawSingle()">ቁጥር አውጣ</button>
             <button id="auto-btn" class="btn" style="background:#0ea5e9; color:white;" onclick="toggleAuto()">Auto ጀምር</button>
@@ -142,19 +110,18 @@
 
         <div id="picker-page" class="page">
             <h3 style="text-align:center;">ካርቴላ ይምረጡ</h3>
-            <div id="card-list" style="display:grid; grid-template-columns:repeat(4,1fr); gap:10px; max-height:450px; overflow-y:auto; padding:5px;"></div>
+            <div id="card-list" style="display:grid; grid-template-columns:repeat(4,1fr); gap:10px; max-height:400px; overflow-y:auto; padding:5px;"></div>
             <button class="btn" style="background:#334155; color:white;" onclick="showPage('home-page')">ተመለስ</button>
         </div>
 
         <div id="game-page" class="page">
-            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
-                <button onclick="location.reload()" style="background:rgba(244, 63, 94, 0.2); color:var(--red); border:1px solid var(--red); border-radius:10px; padding:8px 15px; font-weight:bold;">ውጣ</button>
-                <span id="card-label" style="color:var(--gold); font-size:1.1rem; font-weight:800;"></span>
+            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
+                <button onclick="location.reload()" style="background:rgba(244, 63, 94, 0.2); color:var(--red); border:1px solid var(--red); border-radius:10px; padding:8px 15px;">ውጣ</button>
+                <span id="card-label" style="color:var(--gold); font-weight:800;"></span>
             </div>
             <div class="ball" id="live-ball">?</div>
-            <div class="recent-numbers" id="live-recent"></div>
             <div class="bingo-grid" id="board"></div>
-            <button class="btn btn-gold" style="margin-top:25px; height:65px; font-size:1.5rem;" onclick="claimBingo()">BINGO!</button>
+            <button class="btn btn-gold" style="margin-top:20px; height:60px; font-size:1.5rem;" onclick="claimBingo()">BINGO!</button>
         </div>
     </div>
 
@@ -180,10 +147,7 @@
                 document.getElementById('winner-overlay').style.display = 'flex';
                 if(autoInterval) toggleAuto();
                 setTimeout(() => {
-                    if(uid == ADMIN_ID) {
-                        db.ref('game/winner').set(null);
-                        db.ref('game/drawn').set([]);
-                    }
+                    if(uid == ADMIN_ID) { db.ref('game/winner').set(null); db.ref('game/drawn').set([]); }
                     document.getElementById('winner-overlay').style.display = 'none';
                     showPage('home-page');
                 }, 2000);
@@ -191,23 +155,16 @@
         });
 
         db.ref('users/'+uid+'/bal').on('value', s => { myBal = s.val()||0; document.getElementById('u-bal').innerText = myBal.toFixed(2)+" ETB"; });
-        
         db.ref('game/drawn').on('value', s => { 
             drawn = s.val()||[]; 
-            const last = drawn[drawn.length-1] || "?";
-            document.getElementById('live-ball').innerText = last;
-            document.getElementById('admin-ball').innerText = last;
-            const recent = drawn.slice(-5).reverse(); 
-            document.getElementById('live-recent').innerHTML = recent.map(n => `<div class="recent-ball">${n}</div>`).join('');
-            document.querySelectorAll('.cell').forEach(cell => { 
-                if(drawn.includes(parseInt(cell.innerText))) cell.classList.add('hint'); 
-            });
+            document.getElementById('live-ball').innerText = drawn[drawn.length-1] || "?";
+            document.getElementById('admin-ball').innerText = drawn[drawn.length-1] || "?";
+            document.querySelectorAll('.cell').forEach(cell => { if(drawn.includes(parseInt(cell.innerText))) cell.classList.add('hint'); });
         });
 
         function claimBingo() {
             const cells = document.querySelectorAll('.cell');
-            let board = [];
-            let idx = 0;
+            let board = [], idx = 0;
             for (let i = 0; i < 5; i++) {
                 let row = [];
                 for (let j = 0; j < 5; j++) {
@@ -223,8 +180,16 @@
             if([0,1,2,3,4].every(i=>board[i][i])) win=true;
             if([0,1,2,3,4].every(i=>board[i][4-i])) win=true;
 
-            if(win) db.ref('game/winner').set(uName);
-            else { tg.HapticFeedback.notificationOccurred('error'); alert("መስመር አልሞላህም!"); }
+            if(win) {
+                // ሎጂክ፡ የከፈለውን 80% መመለስ (ለሙከራ)
+                // እዚህ ጋር በብዙ ተጫዋች ሲሆን ጠቅላላውን ብር ማስላት ትችላለህ
+                let winAmount = selectedPrice * 0.8; 
+                db.ref('users/'+uid+'/bal').set(myBal + winAmount);
+                db.ref('game/winner').set(uName + " (+" + winAmount.toFixed(0) + " ETB)");
+            } else {
+                tg.HapticFeedback.notificationOccurred('error');
+                alert("መስመር አልሞላህም!");
+            }
         }
 
         function drawSingle() {
